--- a/JewelleryOnline/Web.config
+++ b/JewelleryOnline/Web.config
@@ -14,6 +14,7 @@
   
   <connectionStrings>
     <add name="JewelleryOnlineConnection" connectionString="Data Source=DESKTOP-OGOCGH7\SQLEXPRESS;Initial Catalog=JewelleryOnlineDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="JewelleryOnlineDBEntities" connectionString="metadata=res://*/BussinessObjects.csdl|res://*/BussinessObjects.ssdl|res://*/BussinessObjects.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-OGOCGH7\SQLEXPRESS;initial catalog=JewelleryOnlineDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   
   <system.web>
