--- a/JewelleryOnline/JewelleryOnline.csproj
+++ b/JewelleryOnline/JewelleryOnline.csproj
@@ -99,9 +99,27 @@
     <Content Include="EditProduct.aspx" />
     <Content Include="HomePage.aspx" />
     <Content Include="Images\cap.jpg" />
+    <Content Include="Images\chaingold6.png" />
     <Content Include="Images\delete.png" />
     <Content Include="Images\editBold.png" />
     <Content Include="Images\editLight.png" />
+    <Content Include="Images\goldchain.png" />
+    <Content Include="Images\goldring.png" />
+    <Content Include="Images\jewellery1.png" />
+    <Content Include="Images\jewellery10.png" />
+    <Content Include="Images\jewellery11.png" />
+    <Content Include="Images\jewellery12.png" />
+    <Content Include="Images\jewellery13.png" />
+    <Content Include="Images\jewellery14.png" />
+    <Content Include="Images\jewellery15.png" />
+    <Content Include="Images\jewellery2.png" />
+    <Content Include="Images\jewellery3.png" />
+    <Content Include="Images\jewellery4.png" />
+    <Content Include="Images\jewellery5.png" />
+    <Content Include="Images\jewellery6.png" />
+    <Content Include="Images\jewellery7.png" />
+    <Content Include="Images\jewellery8.png" />
+    <Content Include="Images\jewellery9.png" />
     <Content Include="Images\JOLogo.png" />
     <Content Include="Inventory.aspx" />
     <Content Include="Login.aspx" />
